--- a/public/index.html
+++ b/public/index.html
@@ -33,15 +33,11 @@
     <meta name="og:site_name" content="Zircon"/>
     <meta name="og:email" content="info@zircon.finance"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ff007a" />
+    <meta name="theme-color" content="#492f3a" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Noto+Sans:wght@400;700&family=Reem+Kufi&family=Roboto+Mono:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
