first steps apr and liquidity

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/zircon_fav_32.png" />
 
     <meta name="keywords" content="Dex, Moonbeam, Uniswap, Zircon, DeFI"/>
-    <meta name="description" content="Swap and provide liquidity in one token on Zircon, powered by Moonbeam"/>
-    <meta name="copyright"content="Zircon Labs LTD">
+    <meta name="description" content="Swap and provide liquidity in one token on Zircon, powered by Moonriver"/>
+    <meta name="copyright"content="Nikaia Holdings Ltd">
     <meta name="robots" content="index,follow" />
-    <meta name="copyright" content="Zircon Labs LTD">
+    <meta name="copyright" content="Nikaia Holdings Ltd">
     <meta name="reply-to" content="info@zircon.finance">
-    <meta name="owner" content="Zircon Labs LTD">
+    <meta name="owner" content="Nikaia Holdings Ltd">
     <meta name="url" content="https://beta.zircon.finance">
     <meta name="identifier-URL" content="https://zircon.finance">
     <meta name="category" content="DeFI">
@@ -18,9 +18,9 @@
     <meta name="distribution" content="Global">
     <meta name="revisit-after" content="7 days">
 
-    <meta name="og:title" content="Zircon App (Beta)"/>
+    <meta name="og:title" content="Zircon Gamma App"/>
     <meta name="og:type" content="website"/>
-    <meta name="og:url" content="https://beta.zircon.finance"/>
+    <meta name="og:url" content="https://app.zircon.finance"/>
     <meta
       name="image"
       property="og:image"
@@ -28,12 +28,12 @@
     />
     <meta
       name="description"
-      content="Swap and provide liquidity in one token on Zircon, powered by Moonbeam"
+      content="Swap and provide liquidity in one token on Zircon, powered by Moonriver"
     />
-    <meta name="og:site_name" content="Zircon"/>
-    <meta name="og:email" content="info@zircon.finance"/>
+    <meta name="og:site_name" content="Zircon Gamma App"/>
+    <meta name="og:email" content="hello@zircon.finance"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#492f3a" />
+    <meta name="theme-color" content="#3A1C29" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +53,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Zircon App (Beta)</title>
+    <title>Zircon Gamma App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
